<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="30dip"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
      <TextView
         android:id="@+id/networth_text"     
         android:text="@string/networth"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="5dip"
         android:textSize="24.5sp" />
      <TextView
         android:id="@+id/networth_previous"
         android:text="@string/networth_previous"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="14.5sp" />
      <Button
         android:id="@+id/refresh_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/refresh_label" />
      <Button
         android:id="@+id/history_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/history_label" />
      <Button
         android:id="@+id/about_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/about_label" />
      <Button
         android:id="@+id/exit_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/exit_label" />
   </LinearLayout>
</LinearLayout>
